--- a/suivi_personnages.org
+++ b/suivi_personnages.org
@@ -1,11 +1,15 @@
 * Les status en cours
 
+** Personnages
+
 | Personnage                   | Stress | Blessures | État                        | Fortune |
 |------------------------------+--------+-----------+-----------------------------+---------|
 | Igor                         | 5/14   |           |                             |       3 |
 | Le serviteur de nyarlathotep | 1/7    |           | étourdi tour 1 pour 4 tours |       X |
 | Jean                         | 9/11   |           |                             |       3 |
 |                              |        |           |                             |         |
+
+** Points
 
 | Élan | Menace |
 |------+--------|
