--- a/suivi_personnages.org
+++ b/suivi_personnages.org
@@ -2,18 +2,22 @@
 
 ** Personnages
 
-| Personnage                   | Stress | Blessures | État  | Fortune |
-|------------------------------+--------+-----------+-------+---------|
-| Igor                         | 6/14   |           |       | 2       |
-| Le serviteur de nyarlathotep | 7/7    |         2 | couic | X       |
-| Soldat 1                     | 5/5    |           | couic | X       |
-| Soldat 2                     | 5/5    |         1 | couic | X       |
-| Novice 2                     | 5/5    |         1 | couic |         |
-| Novice 3                     |        |           |       |         |
-| Novice 4                     | 3/5    |           |       | X       |
-| Jean                         | 7/11   |           |       | 2       |
-| Ash                          | 1/10   |           |       |         |
-| Renato                       | 2/9    |           |       | 3       |
+| Personnage                   | Stress | Blessures | État  | Fortune | Salve |
+|------------------------------+--------+-----------+-------+---------+-------|
+| Igor                         | 9/14   |           |       | 2       |       |
+| Le serviteur de nyarlathotep | 7/7    |         2 | couic | X       |       |
+| Soldat 1                     | 5/5    |           | couic | X       |       |
+| Soldat 2                     | 5/5    |           |       | X       |       |
+| Soldat 3                     | 5/5    |           |       | X       |       |
+| Soldat 4                     | 0/5    |           |       | X       |     1 |
+| Soldat 5                     | 0/5    |           |       | X       |     1 |
+| Soldat 6                     | 0/5    |           |       | X       |       |
+| Novice 2                     | 0/5    |           |       |         |     2 |
+| Novice 3                     |        |           |       |         |       |
+| Novice 4                     | 3/5    |           |       | X       |       |
+| Jean                         | 7/11   |           |       | 2       |       |
+| Ash                          | 4/10   |           |       |         |       |
+| Renato                       | 5/9    |           |       | 3       |       |
 
 ** A dépensé un point de fortune pour cette scène
 
@@ -33,18 +37,17 @@
 
 ** tour 1
 
-- [X] Asha
+- [ ] Asha
 - [ ] Novice 1
 - [ ] Novice 2
-- [X] Novice 3
+- [ ] Novice 3
 - [ ] Novice 4
-- [ ] Soldat 3
 - [ ] Soldat 4
 - [ ] Soldat 5
 - [ ] Soldat 6
-- [X] Jean
-- [X] Émile
-- [ ] Igor
+- [ ] Jean
+- [ ] Émile
+- [X] Igor
 - [X] Renato
 
 
