--- a/suivi_personnages.org
+++ b/suivi_personnages.org
@@ -4,14 +4,14 @@
 
 | Personnage | Stress | Blessures | État | Fortune | Salve |
 |------------+--------+-----------+------+---------+-------|
-| Asha       | 4/10   |           |      | 2       |       |
-| Igor       | 13/14  |           |      | 2       |       |
-| Jean       | 7/11   |           |      | 2       |     1 |
-| Novice 1   |        |           |      | X       |     2 |
-| Novice 4   | 3/5    |           |      | X       |       |
-| Renato     | 5/9    |           |      | 3       |       |
-| Soldat 4   | 0/5    |           |      | X       |     1 |
-| Soldat 5   | 0/5    |           |      | X       |     1 |
+| Asha       | 4/10   |           |      |       2 |       |
+| Igor       | 13/14  |           |      |       2 |       |
+| Jean       | 7/11   |           |      |       2 |     1 |
+| Novice 1   |        |           |      |       X |     2 |
+| Novice 4   | 3/5    |           |      |       X |       |
+| Renato     | 5/9    |           |      |       3 |       |
+| Soldat 4   | 3/5    |           |      |       X |     2 |
+| Émile      | 1/13   |           |      |         |       |
 
 ** A dépensé un point de fortune pour cette scène
 
@@ -31,12 +31,10 @@
 
 ** tour 1
 
-- [X] Asha
-- [X] Novice 1
-- [X] Novice 4
+- [ ] Asha
+- [ ] Novice 1
+- [ ] Novice 4
 - [ ] Soldat 4
-- [ ] Soldat 5
-- [ ] Soldat 6
 - [ ] Jean
 - [ ] Émile
 - [ ] Igor
